[gd_scene load_steps=11 format=2]

[ext_resource path="res://Interactables/Puzzles/AirConditioning/Air.gd" type="Script" id=1]
[ext_resource path="res://Interface/WallSwitch/wallSwitch.png" type="Texture" id=2]
[ext_resource path="res://Interactables/Puzzles/AirConditioning/control.png" type="Texture" id=3]
[ext_resource path="res://Interactables/Puzzles/AirConditioning/ButtonTyped.gd" type="Script" id=4]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxEmpty" id=9]

[node name="Air" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 161, 91 )
texture = ExtResource( 3 )
hframes = 2

[node name="ButtonTyped" type="Control" parent="."]
margin_left = 1.0
margin_right = 323.0
margin_bottom = 181.0
script = ExtResource( 4 )

[node name="Digito1" type="Label" parent="ButtonTyped"]
margin_left = 142.0
margin_top = 45.0
margin_right = 150.0
margin_bottom = 53.0
rect_scale = Vector2( 3, 3 )
align = 1

[node name="Digito2" type="Label" parent="ButtonTyped"]
margin_left = 162.0
margin_top = 45.0
margin_right = 170.0
margin_bottom = 53.0
rect_scale = Vector2( 3, 3 )
align = 1

[node name="ButtonOff" type="Button" parent="ButtonTyped"]
margin_left = 170.0
margin_top = 74.0
margin_right = 186.0
margin_bottom = 89.0
mouse_default_cursor_shape = 2
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 6 )
flat = true

[node name="ButtonUp" type="Button" parent="ButtonTyped"]
margin_left = 148.0
margin_top = 74.0
margin_right = 166.0
margin_bottom = 88.0
rect_scale = Vector2( 1, 0.48 )
mouse_default_cursor_shape = 2
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 6 )
flat = true

[node name="ButtonDown" type="Button" parent="ButtonTyped"]
margin_left = 148.0
margin_top = 84.0
margin_right = 166.0
margin_bottom = 98.0
rect_scale = Vector2( 1, 0.36 )
mouse_default_cursor_shape = 2
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 6 )
flat = true

[node name="ButtonMode" type="Button" parent="ButtonTyped"]
margin_left = 128.0
margin_top = 74.0
margin_right = 144.0
margin_bottom = 89.0
mouse_default_cursor_shape = 2
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 6 )
flat = true

[node name="Button5" type="Button" parent="ButtonTyped"]
margin_left = 129.0
margin_top = 94.0
margin_right = 187.0
margin_bottom = 123.0
mouse_filter = 1
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 6 )
flat = true

[node name="GoBack" type="Button" parent="ButtonTyped"]
margin_left = 7.0
margin_top = 7.0
margin_right = 24.0
margin_bottom = 25.0
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 8 )
custom_styles/focus = SubResource( 9 )
icon = ExtResource( 2 )
flat = true

[connection signal="pressed" from="ButtonTyped/ButtonOff" to="ButtonTyped" method="_on_ButtonOff_pressed"]
[connection signal="pressed" from="ButtonTyped/ButtonUp" to="ButtonTyped" method="_on_ButtonUp_pressed"]
[connection signal="pressed" from="ButtonTyped/ButtonDown" to="ButtonTyped" method="_on_ButtonDown_pressed"]
[connection signal="pressed" from="ButtonTyped/ButtonMode" to="ButtonTyped" method="_on_ButtonMode_pressed"]
[connection signal="pressed" from="ButtonTyped/GoBack" to="." method="_on_GoBack_pressed"]
